# soxfilter

./: CMakeLists.txt
.github/workflows/: build.yml
src/: soxfilter.cpp
